--- a/anfaenger.html
+++ b/anfaenger.html
@@ -1,36 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Anfaenger - CGAI</title>
-<link rel="stylesheet" href="css/style.css">
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Anfänger · CGAI</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css"/>
 <script src="https://s3.tradingview.com/tv.js"></script>
+<script defer src="js/app.js"></script>
 </head>
-<body onload="if(document.getElementById('chart')) loadChart();">
-<header>
-    <img src="assets/logo.svg" alt="CGAI Logo" height="50">
-    <nav>
-        <a href="index.html">Start</a>
-        <a href="mindset.html">Mindset</a>
-        <a href="krypto.html">Krypto</a>
-        <a href="ueber-uns.html">Über uns</a>
-    </nav>
-</header>
-<div class="container">
+<body >
+<nav class="nav"><div class="container nav-inner">
+  <a class="brand" href="index.html"><img src="assets/logo.svg" alt="CGAI"><span>CGAI</span></a>
+  <div class="menu"><a href="index.html">Start</a><a href="mindset.html">Mindset</a><a href="krypto.html">Krypto</a><a href="ueber-uns.html">Über&nbsp;uns</a></div>
+</div></nav>
 
-<h1>Anfaenger</h1>
-<p>Informationen für anfaenger-Kategorie.</p>
-<div class="product">
-<h2>Anfaenger PDF</h2>
-<p>Preis: 14,99 €</p>
-<a class="btn" href="pdfs/anfaenger.pdf">Kaufen (Demo)</a>
-</div>
+<header class="hero"><div class="container">
+  <p class="kicker">Anfänger</p>
+  <h1>Anfänger</h1>
+  <p class="lead">Inhalte folgen – dieser Bereich ist editierbar.</p>
+</div></header>
+<section class="section"><div class="container card"><h3>Beispiel</h3><p>Text hier austauschen. PDFs/Produkte später via Stripe-Checkout.</p></div></section>
 
-</div>
-<footer>
-    <p>© 2025 CGAI - Alle Rechte vorbehalten</p>
-</footer>
-<script src="js/app.js"></script>
-</body>
-</html>
+<footer class="footer"><div class="container">© 2025 CGAI – Alle Rechte vorbehalten.</div></footer>
+</body></html>
