--- a/krypto.html
+++ b/krypto.html
@@ -1,37 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Krypto - CGAI</title>
-<link rel="stylesheet" href="css/style.css">
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Krypto · CGAI</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css"/>
 <script src="https://s3.tradingview.com/tv.js"></script>
+<script defer src="js/app.js"></script>
 </head>
-<body onload="if(document.getElementById('chart')) loadChart();">
-<header>
-    <img src="assets/logo.svg" alt="CGAI Logo" height="50">
-    <nav>
-        <a href="index.html">Start</a>
-        <a href="mindset.html">Mindset</a>
-        <a href="krypto.html">Krypto</a>
-        <a href="ueber-uns.html">Über uns</a>
-    </nav>
-</header>
-<div class="container">
+<body onload='loadChart()'>
+<nav class="nav"><div class="container nav-inner">
+  <a class="brand" href="index.html"><img src="assets/logo.svg" alt="CGAI"><span>CGAI</span></a>
+  <div class="menu"><a href="index.html">Start</a><a href="mindset.html">Mindset</a><a href="krypto.html">Krypto</a><a href="ueber-uns.html">Über&nbsp;uns</a></div>
+</div></nav>
 
-<h1>Krypto Marktübersicht</h1>
-<div id="chart" class="chart-container"></div>
-<h2>Kategorien</h2>
-<ul>
-<li><a href="trader.html">Trader</a></li>
-<li><a href="investor.html">Investor</a></li>
-<li><a href="anfaenger.html">Anfänger</a></li>
-</ul>
+<header class="hero"><div class="container">
+  <p class="kicker">Krypto</p>
+  <h1>Gesamter Kryptomarkt – Live</h1>
+  <p class="lead">Historie seit 2010, Echtzeit‑Update. Ruhige Farben, klare Lesbarkeit.</p>
+</div></header>
 
-</div>
-<footer>
-    <p>© 2025 CGAI - Alle Rechte vorbehalten</p>
-</footer>
-<script src="js/app.js"></script>
-</body>
-</html>
+<section class="section"><div class="container">
+  <div id="chart" class="chart"></div>
+</div></section>
+
+<section class="section"><div class="container grid cols-3">
+  <a class="card" href="trader.html"><h3>Trader</h3><p>Playbooks, Risiko‑Korridor, Pre‑Trade‑Check.</p></a>
+  <a class="card" href="investor.html"><h3>Investor</h3><p>Allokation, Rebalancing, Szenarien.</p></a>
+  <a class="card" href="anfaenger.html"><h3>Anfänger</h3><p>90‑Tage‑Plan, Glossar, Grundregeln.</p></a>
+</div></section>
+
+<footer class="footer"><div class="container">© 2025 CGAI – Alle Rechte vorbehalten.</div></footer>
+</body></html>
